--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.1'
 services:
   stats-server:
+    depends_on:
+      - stats-db
     ports:
       - "9090:9090"
 
@@ -8,6 +10,9 @@ services:
     image: postgres:14-alpine
 
   ewm-service:
+    depends_on:
+      - stats-server
+      - ewm-db
     ports:
       - "8080:8080"
 
